common-applications/test-environment/openeuler-signatrust/app/website-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: website-ingress
  namespace: openeuler-signatrust
spec:
  rules:
  - host: signatrust.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - signatrust.test.osinfra.cn
    secretName: website-tls
